removendo arquivos temporarios

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Bookmarkery {% block title %}{% end %}</title>
 
+    <link rel="shortcut icon" href="./static/img/favicon.ico">	
+
     <script src="./static/js/application.js"></script>
 
     <link href="./static/css/bootstrap.css" rel="stylesheet">
