alterando a localizacao das operacoes de labels

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,26 +5,25 @@
 <div>
   <form class="form-inline">
     <img src="./static/img/bookmark-add.jpg" width="40" height="40" >
-    <input type="text" class="input-small" placeholder="Nome">
+    <input type="text" class="input" placeholder="Nome">
     <input type="text" class="input" placeholder="URL">
 
     <input type="password" class="input-xlarge" placeholder="Descrição">
-    <input type="text" class="input" placeholder="Marcadores">
+    <input type="text" class="input" placeholder="Marcadores (separe por vírgula)">
     <button type="submit" class="btn">Adicionar</button>
   </form>
 </div>
 
 
 <div>
-<span>Filtrar por:  </span>
- 
-<a href="#">  <span class="label label-info">Python</span></a>
-<a href="#">  <span class="label label-info">Java</span></a>
-<a href="#">  <span class="label label-info">Viagem</span></a>
-<a href="#">  <span class="label label-info">Programação</span></a>
-<a href="#">  <span class="label label-info">Culinária</span></a>
-<a href="#">  <span class="label label-info">Esportes</span></a>
+  <span>Filtrar por:  </span>
 
+  <a href="#">  <span class="label label-info">Python</span></a>
+  <a href="#">  <span class="label label-info">Java</span></a>
+  <a href="#">  <span class="label label-info">Viagem</span></a>
+  <a href="#">  <span class="label label-info">Programação</span></a>
+  <a href="#">  <span class="label label-info">Culinária</span></a>
+  <a href="#">  <span class="label label-info">Esportes</span></a>
 </div>
 
 <div style="margin-top:15px;">
